Implemented https://svn.eionet.europa.eu/projects/Reportnet/ticket/2726 + refactoring HarvestingJob